✨fix some question.